--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,18 @@ colorama==0.4.6
 contourpy==1.3.3
 cycler==0.12.1
 durationpy==0.10
+filelock==3.20.3
 flatbuffers==25.9.23
 fonttools==4.61.1
 fpdf==1.7.2
+fsspec==2026.1.0
 gast==0.7.0
 google-pasta==0.2.0
 grpcio==1.76.0
 h5py==3.15.1
+huggingface-hub==0.36.0
 idna==3.11
+Jinja2==3.1.6
 joblib==1.5.3
 keras==3.13.0
 kiwisolver==1.4.9
@@ -28,11 +32,13 @@ mdurl==0.1.2
 ml_dtypes==0.5.4
 mpmath==1.3.0
 namex==0.1.0
+networkx==3.6.1
 numpy==2.2.6
 opencv-python==4.12.0.88
 opt_einsum==3.4.0
 optree==0.18.0
 packaging==25.0
+pandas==2.3.3
 pillow==12.1.0
 pipx==1.8.0
 platformdirs==4.5.1
@@ -43,10 +49,15 @@ pyparsing==3.3.1
 PyPika==0.48.9
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+pytz==2025.2
+PyYAML==6.0.3
+regex==2026.1.15
 requests==2.32.5
 rich==14.2.0
+safetensors==0.7.0
 scikit-learn==1.8.0
 scipy==1.17.0
+seaborn==0.13.2
 setuptools==80.9.0
 six==1.17.0
 sympy==1.14.0
@@ -55,8 +66,14 @@ tensorboard==2.20.0
 tensorboard-data-server==0.7.2
 tensorflow==2.20.0
 termcolor==3.3.0
+tf_keras==2.20.1
 threadpoolctl==3.6.0
+tokenizers==0.22.2
+torch==2.9.1
+tqdm==4.67.1
+transformers==4.57.6
 typing_extensions==4.15.0
+tzdata==2025.3
 urllib3==2.3.0
 userpath==1.9.2
 websocket-client==1.9.0
