--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,73 @@
 absl-py==2.3.1
+alembic==1.18.1
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
 argcomplete==3.6.3
 astunparse==1.6.3
+blinker==1.9.0
+cachetools==6.2.5
 certifi==2026.1.4
+cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
+cloudpickle==3.1.2
 colorama==0.4.6
 contourpy==1.3.3
+cryptography==46.0.3
 cycler==0.12.1
+databricks-sdk==0.80.0
+docker==7.1.0
 durationpy==0.10
+fastapi==0.128.0
 filelock==3.20.3
+Flask==3.1.2
+flask-cors==6.0.2
 flatbuffers==25.9.23
 fonttools==4.61.1
 fpdf==1.7.2
 fsspec==2026.1.0
 gast==0.7.0
+gitdb==4.0.12
+GitPython==3.1.46
+google-auth==2.47.0
 google-pasta==0.2.0
+graphene==3.4.3
+graphql-core==3.2.7
+graphql-relay==3.2.0
+greenlet==3.3.1
 grpcio==1.76.0
+h11==0.16.0
 h5py==3.15.1
+huey==2.6.0
 huggingface-hub==0.36.0
 idna==3.11
+importlib_metadata==8.7.1
+itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.5.3
 keras==3.13.0
 kiwisolver==1.4.9
 libclang==18.1.1
+Mako==1.3.10
 Markdown==3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 matplotlib==3.10.8
 mdurl==0.1.2
 ml_dtypes==0.5.4
+mlflow==3.8.1
+mlflow-skinny==3.8.1
+mlflow-tracing==3.8.1
 mpmath==1.3.0
 namex==0.1.0
 networkx==3.6.1
 numpy==2.2.6
 opencv-python==4.12.0.88
+opentelemetry-api==1.39.1
+opentelemetry-proto==1.39.1
+opentelemetry-sdk==1.39.1
+opentelemetry-semantic-conventions==0.60b1
 opt_einsum==3.4.0
 optree==0.18.0
 packaging==25.0
@@ -43,6 +76,12 @@ pillow==12.1.0
 pipx==1.8.0
 platformdirs==4.5.1
 protobuf==6.33.4
+pyarrow==22.0.0
+pyasn1==0.6.2
+pyasn1_modules==0.4.2
+pycparser==3.0
+pydantic==2.12.5
+pydantic_core==2.41.5
 Pygments==2.19.2
 pyodbc==5.3.0
 pyparsing==3.3.1
@@ -50,16 +89,22 @@ PyPika==0.48.9
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytz==2025.2
+pywin32==311
 PyYAML==6.0.3
 regex==2026.1.15
 requests==2.32.5
 rich==14.2.0
+rsa==4.9.1
 safetensors==0.7.0
 scikit-learn==1.8.0
 scipy==1.17.0
 seaborn==0.13.2
 setuptools==80.9.0
 six==1.17.0
+smmap==5.0.2
+SQLAlchemy==2.0.46
+sqlparse==0.5.5
+starlette==0.50.0
 sympy==1.14.0
 tenacity==9.1.2
 tensorboard==2.20.0
@@ -72,10 +117,13 @@ tokenizers==0.22.2
 torch==2.9.1
 tqdm==4.67.1
 transformers==4.57.6
+typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.3.0
 userpath==1.9.2
+uvicorn==0.40.0
+waitress==3.0.2
 websocket-client==1.9.0
 websockets==15.0.1
 Werkzeug==3.1.5
